# dev-sweep

./: Cargo.toml  ReadMe.md
assets/configs/: android_studio.json  flutter.json  next_js.json  react.json  react_vite.json  rust.json
assets/devsweep/configs/: android_studio.json  flutter.json  next_js.json  react.json  react_vite.json  rust.json
assets/devsweep/database/: app.db
src/: main.rs
src/modules/: activity.rs  cleaner.rs  dashboard.rs  mod.rs  settings.rs  window_management.rs
src/modules/others/: configs.rs  log.rs  notification.rs  window_management.rs
src/utils/: mod.rs
src/utils/database/: database.rs
src/utils/services/: variables.rs
ui/: app-window.slint  app_window.slint  app_window_data.slint
ui/components/: check_box.slint  circular_spinner.slint  dropdown.slint  empty_activity.slint  grouped_option.slint  recent_activity.slint  terminal_log.slint  text_field.slint  toggle_switch.slint
ui/components/buttons/: icon_button.slint  text_button.slint  text_icon_button.slint
ui/components/cards/: card.slint  plugin_card.slint  rect_card.slint  stat_card.slint
ui/components/divider/: horizontal_divider.slint  vertical_divider.slint
ui/components/inputs/: text_area.slint  text_field.slint
ui/global/: cleaner_global.slint  recent_activity.slint
ui/pages/activity/: activity.slint  activity_data.slint
ui/pages/activity_log/: activity_log.slint  activity_log_data.slint
ui/pages/cleaners/: cleaners.slint  cleaners_data.slint
ui/services/: icons.slint
ui/theme/: dark.slint  light.slint  theme.slint
(+18 files in other folders)
