[package]
name = "dev_sweep_lint"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.15.1"
image = "0.25.10"
base64 = "0.22.1"
serde_json = "1.0.149"
i-slint-backend-winit = "1.15.1" # Must be the SAME version with slint
rusqlite = { version = "0.39.0", features = ["bundled"] }
dark-light = "2.0.0"
dirs = "6.0.0"
open = "5.3.3"

[build-dependencies]
slint-build = "1.15.1" # Must be the SAME version with slint
